components/sections/section/section.style.css
.header *{
	margin-left: 20px;
	font-family: quicksand_bold;
}

.info{
	margin-top: 5px;
	margin-left: 25px;
}

.raw{
	margin-left: 150px;
	font-family: quicksand_bold;
}

#rawinfo{
	margin-top: -100px;
}

hr{
	border: 0.1em solid #303030;
}

.studinfo{
	margin-left: 80px;
}

.icons{
	margin-top: -40px;
}

.icons2{
	margin-top: -15px;
}

#secinfo{
	margin-top: 20px;
}

#sectionedit input{
	background: transparent;
	color: #303030;
	border: 1px solid #737373;
}

.editsec{
	margin-left: 150px;
}

